--- a/Tp/src/main/Front/css/estilosActualizarDatos.css
+++ b/Tp/src/main/Front/css/estilosActualizarDatos.css
@@ -40,7 +40,7 @@ text-decoration: none;
 }
 
 .header-button:hover{
-background-color: rgb(11, 172, 172);
+background-color: rgb(220, 165, 236) ;
 }
 /* FIN HEADER*/
 
@@ -60,8 +60,7 @@ transition: color 0.5s ease-in-out;
 
 /*cuando pasamos el cursor por arriba cambia el color*/
 #menu2 button:hover{
-color: #b3e5fc;
-}
+color:rgb(0, 0, 0)}
 
 #menu2 i{
 font-size: 20px;
@@ -69,7 +68,7 @@ font-size: 20px;
 
 .side-bar{
 position: absolute; /*no ocupa espacio*/
-background-color: rgb(17, 90, 90);
+background-color: #952dbe;
 width: 280px;
 top: 0;
 bottom: 0;
@@ -166,7 +165,7 @@ width: 300px;
 }
 
 form fieldset{
-border: 2px solid darkcyan;
+border: 2px solid #A632D4;
 border-radius: 15px;
 padding: 25px;
 }
@@ -200,7 +199,7 @@ padding: 10px 12px;
   font-size: 16px;
   font-family: 'Roboto Condensed', sans-serif;
   border: none;
-  background-color: darkcyan;
+  background-color: #C281EA;
   color: white;
   padding: 6px 10px;
   text-decoration: none;
@@ -209,7 +208,7 @@ padding: 10px 12px;
 }
 
 .boton-actualizar:hover{
-  background-color: rgb(11, 172, 172);
+  background-color: #C281EA;
 }
 
 .boton-cancelar{
@@ -265,7 +264,9 @@ color: white;
 display: flex;
 justify-content: center;
 padding: 15px;
-margin-top: 50px;
+position: absolute;
+bottom: 0;
+width: 100%;
 font-family: 'Roboto Condensed', sans-serif;
 flex-direction: column;
 gap: 20px;
