--- a/Tp/src/main/Front/css/estilosRegistro.css
+++ b/Tp/src/main/Front/css/estilosRegistro.css
@@ -36,104 +36,26 @@ header{
   }
   
   .header-button:hover{
-  background-color: rgb(11, 172, 172);
+  background-color: rgb(220, 165, 236);
   }
 /* FIN HEADER*/
 
-/* MENU */
-#menu2{
-  position: absolute;
-  left: 150px;
-}
-
-#menu2 button{
-  border: none;
-  background-color: transparent;
-  color: white;
-  cursor: pointer;
-  transition: color 0.5s ease-in-out;
-}
-
-/*cuando pasamos el cursor por arriba cambia el color*/
-#menu2 button:hover{
-  color: #b3e5fc;
-}
-
-#menu2 i{
-  font-size: 20px;
-}
-
-.side-bar{
-  position: absolute; /*no ocupa espacio*/
-  background-color: rgb(17, 90, 90);
-  width: 280px;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  transform: translateX(-100%);
-  transition: transform 0.5s ease-in-out;
-}
-  
-.side-bar.open{
-  transform: translateX(0);
-}
-
-nav p{
-  font-family: 'Fira Sans', sans-serif;
-  color: white;
-  font-size: 25px;
-  margin-top: 23px;
-  margin-left: 50px;
-}
-
-.conj-botones-menu{
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: space-between;
-  padding: 260px 50px;
-}
-
-.boton-menu{
-  font-family: 'Fira Sans', sans-serif;
-  color: white;
-  font-size: 20px;
-  cursor: pointer;
-  transition: color 0.5s ease-in-out;
-  text-decoration: none;
-}
-
-.boton-menu:hover{
-  color: black;
-}
-
-.cruz{
-  position: absolute;
-  background-color: transparent;
-  border: none;
-  right: 20px;
-  top: 20px;
-  cursor: pointer;
-  color: white;
-  transition: color 0.5s ease-in-out;
-}
-
-.cruz:hover{
-  color: black;
-}
-
-.cruz i{
-  font-size: 30px;
-  
-}
-
-/* FIN MENU */
-
 /* FORMULARIOS */
+
+.titulo{
+  display: flex;
+  gap: 25px;
+}
+
 
 h1{
   font-family: 'Fira Sans', sans-serif;
-  padding: 40px 200px 15px 260px;
+  padding: 40px 0 15px 260px;
+}
+
+.icon-titulo{
+  font-size: 20px;
+  padding: 40px 0 0 0;
 }
 
 form{
@@ -147,7 +69,7 @@ form > section{
 }
 
 form fieldset{
-  border: 2px solid darkcyan;
+  border: 2px solid #A632D4;
   border-radius: 15px;
   padding: 25px;
 }
@@ -199,7 +121,7 @@ form input{
   font-size: 16px;
   font-family: 'Roboto Condensed', sans-serif;
   border: none;
-  background-color: darkcyan;
+  background-color: #C281EA;
   color: white;
   padding: 6px 10px;
   cursor: pointer;
@@ -208,7 +130,7 @@ form input{
 }
 
 .boton-registrarse:hover{
-  color: #b3e5fc;
+  color: ;
 }
 /* FIN FORMULARIOS */
 
