--- a/Tp/src/main/Front/css/estilosRegistrarMascota.css
+++ b/Tp/src/main/Front/css/estilosRegistrarMascota.css
@@ -16,12 +16,16 @@ header{
   align-items: center;
 }
 
-.botones{
+.usuario{
   display: flex;
   gap: 20px;
-}
-
-.header-button{
+  }
+  
+  .usuario-icon{
+    font-size: 30px;
+  }
+  
+  .header-button{
   border-radius: 7px;
   text-align: center;
   font-size: 16px;
@@ -36,9 +40,110 @@ header{
   }
   
   .header-button:hover{
-  background-color: rgb(220, 165, 236);
+  background-color: rgb(11, 172, 172);
   }
-/* FIN HEADER*/
+  /* FIN HEADER*/
+  
+  /* MENU */
+  #menu2{
+  position: absolute;
+  left: 150px;
+  }
+  
+  #menu2 button{
+  border: none;
+  background-color: transparent;
+  color: white;
+  cursor: pointer;
+  transition: color 0.5s ease-in-out;
+  }
+  
+  /*cuando pasamos el cursor por arriba cambia el color*/
+  #menu2 button:hover{
+  color: #b3e5fc;
+  }
+  
+  #menu2 i{
+  font-size: 20px;
+  }
+  
+  .side-bar{
+  position: absolute; /*no ocupa espacio*/
+  background-color: rgb(69, 17, 90);
+  width: 280px;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  transform: translateX(-100%);
+  transition: transform 0.5s ease-in-out;
+  }
+  
+  .side-bar.open{
+  transform: translateX(0);
+  }
+  
+  nav p{
+  font-family: 'Fira Sans', sans-serif;
+  color: white;
+  font-size: 25px;
+  margin-top: 23px;
+  margin-left: 50px;
+  }
+  
+  .conj-botones-menu{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: space-between;
+  padding: 260px 50px;
+  }
+  
+  .boton-menu{
+  font-family: 'Fira Sans', sans-serif;
+  color: white;
+  font-size: 20px;
+  cursor: pointer;
+  transition: color 0.5s ease-in-out;
+  text-decoration: none;
+  }
+  
+
+
+  .boton-menu:hover{
+  color: rgb(183, 116, 189);
+  }
+  
+  .boton-menu-seleccionado{
+    font-family: 'Fira Sans', sans-serif;
+    color: rgb(0, 0, 0);
+    font-size: 20px;
+    cursor: pointer;
+    transition: color 0.5s ease-in-out;
+    text-decoration: none;
+    text-decoration: underline;
+  }
+  
+  .cruz{
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  right: 20px;
+  top: 20px;
+  cursor: pointer;
+  color: white;
+  transition: color 0.5s ease-in-out;
+  }
+  
+  .cruz:hover{
+  color: black;
+  }
+  
+  .cruz i{
+  font-size: 30px;
+  
+  }
+  
+  /* FIN MENU */
 
 /* FORMULARIOS */
 
@@ -90,6 +195,18 @@ form input{
   font-size: 16px;
 }
 
+textarea{
+  width: 300px;
+  height: 75px;
+  border: none;
+  background-color: #f5f5f5;
+  color: #757575;
+  border-radius: 15px;
+  padding: 10px 12px;
+  font-size: 16px;
+  font-family: 'Fira Sans', sans-serif;
+}
+
 #dni select{
   display: inline-block;
   width: 30%;
@@ -108,6 +225,18 @@ form input{
 #dni input{
   display: inline-block;
   width: 70%;
+}
+
+
+.descripcion{
+  width: 300px;
+  height: 45px;
+  border: none;
+  background-color: #f5f5f5;
+  color: #757575;
+  border-radius: 15px;
+  padding: 10px 12px;
+  font-size: 16px;
 }
 
 .formulario-foto{
@@ -130,7 +259,7 @@ form input{
 }
 
 .boton-registrarse:hover{
-  color: ;
+  color: rgb(220, 165, 236);
 }
 /* FIN FORMULARIOS */
 
@@ -169,102 +298,3 @@ footer{
 }
 /* FIN FOOTER*/
 
-/* MENU 1
-.container {
-    display: inline-block;
-    cursor: pointer;
-    position: fixed;
-    right: 0.5cm;
-    top: 0.3cm;
-  }
-  
-  .bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 5px; 
-    background-color: #333;
-    margin: 6px 0;
-    transition: 0.4s;
-  }
-  
-  /* Rotate first bar 
-  .change .bar1 {
-    -webkit-transform: rotate(-45deg) translate(-9px, 6px) ;
-    transform: rotate(-45deg) translate(-9px, 6px) ;
-  }
-  
-  /* Fade out the second bar 
-  .change .bar2 {
-    opacity: 0;
-  }
-  
-  /* Rotate last bar 
-  .change .bar3 {
-    -webkit-transform: rotate(45deg) translate(-8px, -8px) ;
-    transform: rotate(45deg) translate(-8px, -8px) ;
-  }
-
-
-
-  .menu {
-    display: none;  
-    position: fixed;
-    transition: transform 0.2s;
-    z-index: 99;
-    background:darkcyan;
-    color: white;
-    list-style: none;
-    padding-top: 4rem;
-    height: 50px;
-    width: 50px;
-    right: 0.5cm;
-    top: 0.5cm;
-  }
-*/
-
-/* Dropdown Button 
-.dropbtn {
-  background:darkcyan;
-  color: white;
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-}
-
-/* Dropdown button on hover & focus 
-.dropbtn:hover, .dropbtn:focus {
-  background-color: #2980B9;
-}
-
-/* The container <div> - needed to position the dropdown content 
-.dropdown {
-  position: fixed;
-  display: inline-block;
-  right: 0.5cm;
-  top: 0.3cm;
-}
-
-/* Dropdown Content (Hidden by Default) 
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color: #f1f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-  z-index: 1;
-}
-
-/* Links inside the dropdown 
-.dropdown-content a {
-  color: black;
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-}
-
-/* Change color of dropdown links on hover 
-.dropdown-content a:hover {background-color: #ddd}
-
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) V
-.show {display:block;}
-*/
