es una kk intelij

--- a/Tp/src/main/Front/css/estilosEncontreMascota.css
+++ b/Tp/src/main/Front/css/estilosEncontreMascota.css
@@ -27,7 +27,6 @@ header{
   padding-left: 40vh;
 }
 
-  
 .usuario{
   display: flex;
   gap: 20px;
@@ -163,7 +162,7 @@ nav p{
 h1{
   font-family: 'Fira Sans', sans-serif;
   position: relative;
-  font-size: 70px;
+  font-size: 60px;
   text-align: center;
 }
 
@@ -195,8 +194,8 @@ form input{
   font-size: 16px;
 }
 
-.boton-iniciarSesion{
-    width: 70px;
+.boton-encontrarMascota{
+    width: 50vh;
     height: 45px;
     border: none;
     padding: 12px 10px 10px 10px;
@@ -214,16 +213,21 @@ form input{
     text-decoration: none;
 
   }
+
+.boton-encontrarMascota:hover{
+  background-color: rgb(206, 152, 240);
+}
+
+.botonesEncontrar{
+  display: flex;
+  justify-content: center;
+  gap: 5vh;
+}
   
-  .boton-iniciarSesion:hover{
-    background-color: rgb(206, 152, 240);
-  }
-
-
-  .ingresar-mascota{
+.ingresar-mascota{
       display: flex;
-      gap: 10px;
-  }
+  gap: 10px;
+}
 
 
 
@@ -261,7 +265,6 @@ footer{
     font-family: 'Roboto Condensed', sans-serif;
     flex-direction: column;
     gap: 20px;
-    position: absolute;
     bottom: 0;
     width: 100%;
   }
