--- a/Tp/src/main/Front/css/estilosAdoptar.css
+++ b/Tp/src/main/Front/css/estilosAdoptar.css
@@ -4,6 +4,10 @@
     box-sizing: border-box;
 }
 
+html{
+  width: 100%;
+}
+
 /* HEADER */
 header{
   background-color: #A632D4;
@@ -16,11 +20,21 @@ header{
   align-items: center;
 }
 
+.logo{
+  display: flex;
+  align-items: center;
+  gap: 2vh;
+  padding-left: 40vh;
+}
+
+  
 .usuario{
   display: flex;
   gap: 20px;
-  }
-  
+  padding-right: 25vh;
+  align-items: center;
+
+}
   .usuario-icon{
     font-size: 30px;
   }
@@ -76,6 +90,7 @@ header{
   left: 0;
   transform: translateX(-100%);
   transition: transform 0.5s ease-in-out;
+  z-index: 2
   }
   
   .side-bar.open{
@@ -95,7 +110,8 @@ header{
   flex-direction: column;
   justify-content: center;
   align-content: space-between;
-  padding: 260px 50px;
+  padding: 100px 50px;
+  gap: 8vh;
   }
   
   .boton-menu{
