--- a/Tp/src/main/Front/css/estilosSinChapita.css
+++ b/Tp/src/main/Front/css/estilosSinChapita.css
@@ -2,44 +2,45 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-}
+  }
   
 html{
-    width: 100%;
+  width: 100%;
 }
-  
+
 /* HEADER */
 header{
     background-color: #A632D4;
     display: flex;
     height: 85px;
+    /*width: 100vw;*/
     color: white;
     font-family: 'Balsamiq Sans', cursive;
     justify-content: space-around;
     align-items: center;
 }
-
+  
 .logo{
-    display: flex;
-    align-items: center;
-    gap: 5vh;
-    padding-left: 40vh;
-  }
+  display: flex;
+  align-items: center;
+  gap: 5vh;
+  padding-left: 40vh;
+}
   
-  
-.usuario{
+    
+  .usuario{
     display: flex;
     gap: 20px;
     padding-right: 25vh;
     align-items: center;
-
-}
+  
+  }
     
-.usuario-icon{
+  .usuario-icon{
     font-size: 30px;
-}
+  }
     
-.header-button{
+  .header-button{
     border-radius: 7px;
     text-align: center;
     font-size: 16px;
@@ -51,37 +52,37 @@ header{
     cursor: pointer;
     transition: background-color 0.5s ease-in-out;
     text-decoration: none;
-}
+  }
     
-.header-button:hover{
+  .header-button:hover{
     background-color: rgb(11, 172, 172);
-}
-/* FIN HEADER*/
+  }
+  /* FIN HEADER*/
     
-/* MENU */
-#menu2{
+  /* MENU */
+  #menu2{
     position: absolute;
     left: 150px;
-}
+  }
     
-#menu2 button{
+  #menu2 button{
     border: none;
     background-color: transparent;
     color: white;
     cursor: pointer;
     transition: color 0.5s ease-in-out;
-}
+  }
     
-/*cuando pasamos el cursor por arriba cambia el color*/
-#menu2 button:hover{
+  /*cuando pasamos el cursor por arriba cambia el color*/
+  #menu2 button:hover{
     color: #b3e5fc;
-}
+  }
     
-#menu2 i{
+  #menu2 i{
     font-size: 20px;
-}
+  }
     
-.side-bar{
+  .side-bar{
     position: absolute; /*no ocupa espacio*/
     background-color: rgb(69, 17, 90);
     width: 280px;
@@ -91,46 +92,46 @@ header{
     transform: translateX(-100%);
     transition: transform 0.5s ease-in-out;
     z-index: 2; /*Para que aparezca arriba de la portada, (cuanto mas adelante debe estar as grande es el num)*/
-}
+  }
     
-.side-bar.open{
+  .side-bar.open{
     transform: translateX(0);
-}
+  }
     
-nav p{
+  nav p{
     font-family: 'Fira Sans', sans-serif;
     color: white;
     font-size: 25px;
     margin-top: 23px;
     margin-left: 50px;
-}
+  }
     
-.conj-botones-menu{
+  .conj-botones-menu{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-content: space-between;
     padding: 100px 50px;
     gap: 8vh;
-}
+  }
     
-.boton-menu{
+  .boton-menu{
     font-family: 'Fira Sans', sans-serif;
     color: white;
     font-size: 20px;
     cursor: pointer;
     transition: color 0.5s ease-in-out;
     text-decoration: none;
-
-}
+  
+  }
     
   
   
-.boton-menu:hover{
+  .boton-menu:hover{
     color: rgb(183, 116, 189);
-}
+  }
     
-.boton-menu-seleccionado{
+  .boton-menu-seleccionado{
     font-family: 'Fira Sans', sans-serif;
     color: rgb(0, 0, 0);
     font-size: 20px;
@@ -138,9 +139,9 @@ nav p{
     transition: color 0.5s ease-in-out;
     text-decoration: none;
     text-decoration: underline;
-}
+  }
     
-.cruz{
+  .cruz{
     position: absolute;
     background-color: transparent;
     border: none;
@@ -149,155 +150,178 @@ nav p{
     cursor: pointer;
     color: white;
     transition: color 0.5s ease-in-out;
-}
+  }
     
-.cruz:hover{
+  .cruz:hover{
     color: black;
-}
+  }
     
-.cruz i{
+  .cruz i{
     font-size: 30px;
-}
-/* FIN MENU */
+  }
+  /* FIN MENU */
   
-/* MAIN */
+  /* FORMULARIOS */
 .portada{
-    z-index: 1;
-    background-image: url("../fotos/portadaPerfil.jpg");
-    background-blend-mode: darken;
-    height: 75vh;
-    background-position: center center;
-    background-size: cover;
-    position: relative;
+  z-index: 1;
+  background-image: url("../fotos/portada3.jpeg");
+  background-blend-mode: darken;
+  height: 75vh;
+  background-position: center center;
+  background-size: cover;
+  position: relative;
 }
-
-/* PARA OSCURECER LA IMAGEN DEL FONDO */
-.portada::before{
-    content:''; /* existe contenido */
-	position: absolute; /* para poder estirarlo */ 
-    top: 0; /* lo estiramos a todos los extremos de la portada */
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background-color: rgba(0, 0, 0, 0.479);
-}
-
-.portada section{
-    position: relative; /*Para que el texto este adelante del fondo negro transparente*/
-    color: white;
-    padding: 35vh 10vh 0 120vh;
-}
-
-.portada h2{
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 8vh;
-    margin-bottom: 3vh;
-}
-
-.portada p{
-    font-family: 'Abel', sans-serif;
-    font-size: 2.7vh;
-    text-align: end;
-    padding: 0 3vh 0 15vh;
-}
-
-.principal{
+  
+  .titulo{
     display: flex;
-    flex-direction: column;
-    padding: 13vh 20vh 5vh 20vh;
-}
+    gap: 25px;
+  }
   
-.descripcionYFoto{
+  h1{
+    font-family: 'Fira Sans', sans-serif;
+    padding: 40px 0 15px 260px;
+  }
+  
+  .icon-titulo{
+    font-size: 20px;
+    padding: 40px 0 0 0;
+  }
+  
+  form{
     display: flex;
-    gap: 15vh;
-}
+    justify-content: center;
+    gap: 10vh;
+  }
   
-.descripcion{
-    width: 100%;
-}
   
-.descripcion > h2{
-    font-size: 4vh;
-    font-family: 'Roboto Condensed', sans-serif;
-    color: black;
-    margin-bottom: 5vh;
-}
+  form fieldset{
+    border: 2px solid #A632D4;
+    border-radius: 15px;
+    padding: 25px;
+    
+  }
   
-.descripcion > p, .descripcion > b{
-    margin-top: 5vh;
-    font-family: 'Abel', sans-serif;
-    font-size: 3vh;
-}
-
-p{
-    margin-top: 2vh;
-    font-family: 'Abel', sans-serif;
-    font-size: 3vh;
-}
+  .titulos-form{
+    font-family: 'Fira Sans', sans-serif;
+    margin-bottom: 15px;
+  }
   
-.imgDescripcion{
-    margin-top: 9vh;
-}
-
-table{
-    font-family: 'Abel', sans-serif;
-    font-size: 3vh;
-}
-
-td{
-  padding: 1vh 6vh;  
-}
-
-th{
-    text-align: left ;
-}
-
-h3{
-    font-family: 'Abel', sans-serif
-}
-
-.botonAdoptar{
+  form input{
+    width: 300px;
+    height: 45px;
+    border: none;
+    background-color: #f5f5f5;
+    color: #757575;
+    border-radius: 15px;
+    padding: 10px 12px;
+    font-size: 16px;
+  }
+  
+  textarea{
+    width: 300px;
+    height: 75px;
+    border: none;
+    background-color: #f5f5f5;
+    color: #757575;
+    border-radius: 15px;
+    padding: 10px 12px;
+    font-size: 16px;
+    font-family: 'Fira Sans', sans-serif;
+  }
+  
+  select{
+    display: inline-block;
+    width: 50%;
+    border: none;
+    background-color: #f5f5f5;
+    color: #757575;
+    border-radius: 15px;
+    padding: 10px 12px;
+  }
+  
+  select option{
+    text-align: center;
+  }
+  
+  #selectores{
+    display: flex;
+    gap: 5px;
+  }
+  
+  #selectores input{
+    display: inline-block;
+    width: 70%;
+  }
+  
+  .descripcion{
+    width: 300px;
+    height: 45px;
+    border: none;
+    background-color: #f5f5f5;
+    color: #757575;
+    border-radius: 15px;
+    padding: 10px 12px;
+    font-size: 16px;
+  }
+  
+  .formulario-foto{
+    margin-top: 35px;
+  }
+  
+  .boton-registrarse{
+    margin-top: 35px;
     border-radius: 7px;
     text-align: center;
     font-size: 16px;
     font-family: 'Roboto Condensed', sans-serif;
-    border: 2px solid white;
+    border: none;
     background-color: #C281EA;
     color: white;
-    padding: 2px 9px;
+    padding: 6px 10px;
     cursor: pointer;
-    transition: background-color 0.5s ease-in-out;
-    text-decoration: none;
-}
-    
-.botonAdoptar:hover{
-    background-color:rgb(206, 152, 240);
-}
-/* FIN MAIN */
-
-
-/* FOOTER */
-.contacto-general{
+    transition: color 0.5s ease-in-out;
+    transition: border 0.5s ease-in-out;
+  }
+  
+  .boton-registrarse:hover{
+    color: rgb(220, 165, 236);
+  }
+  
+  #caracteristicas{
+    display: flex;
+    gap: 2vh;
+  }
+  
+  #caracteristicas select{
+    width: 40%;
+  }
+  
+  #caracteristicas input{
+    width: 60%;
+  }
+  /* FIN FORMULARIOS */
+  
+  /* FOOTER */
+  .contacto-general{
     display: flex;
     padding: 0px 350px;
     justify-content: space-between;
-}
+  }
   
-.contacto{
+  .contacto{
     display: flex;
     gap: 10px;
-}
+  }
   
-.texto-contactanos{
+  .texto-contactanos{
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 2vh;
-}
-
-.contacto-icon{
+  }
+  
+  .contacto-icon{
     font-size: 40px;
-}
+  }
   
   footer{
     background-color: #A632D4;
@@ -310,4 +334,5 @@ h3{
     flex-direction: column;
     gap: 20px;
   }
-/*FIN FOOTER*/
+  /* FIN FOOTER*/
+  
