--- a/Tp/src/main/Front/css/estilosAdoptar.css
+++ b/Tp/src/main/Front/css/estilosAdoptar.css
@@ -26,37 +26,20 @@ header{
   gap: 2vh;
   padding-left: 40vh;
 }
-
   
 .usuario{
   display: flex;
   gap: 20px;
   padding-right: 25vh;
   align-items: center;
-
+  width: 60vh;
 }
-  .usuario-icon{
-    font-size: 30px;
-  }
-  
-  .header-button{
-  border-radius: 7px;
-  text-align: center;
-  font-size: 16px;
-  font-family: 'Roboto Condensed', sans-serif;
-  border: 2px solid white;
-  background-color: transparent;
-  color: white;
-  padding: 2px 9px;
-  cursor: pointer;
-  transition: background-color 0.5s ease-in-out;
-  text-decoration: none;
-  }
-  
-  .header-button:hover{
-  background-color: rgb(11, 172, 172);
-  }
-  /* FIN HEADER*/
+
+.usuario-icon{
+  font-size: 30px;
+}
+
+/* FIN HEADER*/
   
   /* MENU */
   #menu2{
@@ -162,6 +145,38 @@ header{
   /* FIN MENU */
 
 /* MAIN */
+.portada{
+  z-index: 1;
+  background-image: url("../fotos/portadaAdoptar.jpg");
+  background-blend-mode: darken;
+  height: 75vh;
+  background-position: center -50px;
+  background-size: cover;
+  position: relative;
+}
+
+/* PARA OSCURECER LA IMAGEN DEL FONDO */
+.portada::before{
+  content:''; /* existe contenido */
+  position: absolute; /* para poder estirarlo */ 
+  top: 0; /* lo estiramos a todos los extremos de la portada */
+  bottom: 0;
+left: 0;
+right: 0;
+background-color: rgba(0, 0, 0, 0.479);
+}
+
+.portada section{
+  position: relative; /*Para que el texto este adelante del fondo negro transparente*/
+  color: white;
+  padding: 50vh 1vh 0 150vh;
+}
+
+.portada h2{
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 8vh;
+  margin-bottom: 2vh;
+}
 
 .centered{
 	margin: 0 auto;
@@ -175,7 +190,7 @@ header{
 }
 
 .card{
-	background: rgb(255, 160, 71);
+	background: rgb(225, 193, 235);
 	margin-bottom: 2em;
 	width: 32%;
   border-radius: 5%;
@@ -204,7 +219,7 @@ ul{
 }
 
 .card-title{
-  background: rgba(235, 178, 134, 0.85);
+  background: rgba(191, 120, 233, 0.85);
   padding: 3.5% 0 2.5% 0;
   color: white;
   font-family: 'Roboto Condensed', sans-serif;
@@ -232,7 +247,7 @@ ul{
 
 .card:hover{
   box-shadow: 3px 3px 8px hsl(0, 0%, 70%);
-  background-color: rgb(150, 144, 135);
+  background-color: rgb(193, 149, 204);
 }
 
 span {
