--- a/Tp/src/main/Front/css/estilosIniciarSesion.css
+++ b/Tp/src/main/Front/css/estilosIniciarSesion.css
@@ -9,34 +9,38 @@ header{
   background-color: #A632D4;
   display: flex;
   height: 85px;
-  /*width: 100vw;*/
   color: white;
   font-family: 'Balsamiq Sans', cursive;
-  justify-content: space-around;
-  align-items: center;
 }
 
 .logo{
-  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  gap: 5vh;
+  padding-left: 40vh;
 }
 
 .botones{
   display: flex;
   gap: 20px;
+  margin-right: 10vh;
+  padding: 0 20vh;
+  align-items: center;
 }
 
 .header-button{
   border-radius: 7px;
-  text-align: center;
   font-size: 16px;
   font-family: 'Roboto Condensed', sans-serif;
   border: 2px solid white;
   background-color: transparent;
   color: white;
-  padding: 2px 9px;
+  padding: 2px 2vh;
   cursor: pointer;
   transition: background-color 0.5s ease-in-out;
   text-decoration: none;
+  width: 21vh;
+  text-align: center;;
 }
   
 .header-button:hover{
@@ -171,7 +175,7 @@ form input{
     font-family: 'Roboto Condensed', sans-serif;
     flex-direction: column;
     gap: 20px;
-    position: absolute;
+    
     bottom: 0;
     width: 100%;
   }
