--- a/Front/css/estilosRegistroPersona.css
+++ b/Front/css/estilosRegistroPersona.css
@@ -213,6 +213,12 @@ textarea{
   font-family: 'Fira Sans', sans-serif;
 }
 
+.radio{
+  border: 0px;
+  width: 100%;
+  height: 2em;
+}
+
 #dni select{
   display: inline-block;
   width: 30%;
