--- a/Front/css/estilosHogaresTransito.css
+++ b/Front/css/estilosHogaresTransito.css
@@ -147,7 +147,7 @@ header{
 /* MAIN */
 .portada{
   z-index: 1;
-  background-image: url("../fotos/portadaAdoptar.jpg");
+  background-image: url("../fotos/371fdbaaeddc587ddd4781a2297c5279.png");
   background-blend-mode: darken;
   height: 75vh;
   background-position: center -50px;
@@ -169,36 +169,33 @@ background-color: rgba(0, 0, 0, 0.479);
 .portada section{
   position: relative; /*Para que el texto este adelante del fondo negro transparente*/
   color: white;
-  padding: 30vh 1vh 0 25vh;
+  padding: 15vh 1vh 0 25vh;
 }
 
 .portada h2{
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 8vh;
-  margin-bottom: 2vh;
 }
 
 .centered{
 	padding: 0 30vh;
-  
 }
 
 .card{
-	background: rgb(166, 196, 97);
-	width: 40%;
-  height: 300px;
+	background: rgb(91, 192, 190);
+	width: 45%;
+  height: 380px;
   border-radius: 5%;
 }
 
 .cards {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
   margin-top: 5%;
   padding: 1.5%;
   box-sizing: border-box;
   gap: 10vh;
-  background-color: #A632D4;
 }
 
 a{
@@ -215,7 +212,7 @@ ul{
 }
 
 .card-title{
-  background: rgba(199, 233, 120, 0.85);
+  background: rgb(85, 165, 163);
   padding: 3.5% 0 2.5% 0;
   color: white;
   font-family: 'Roboto Condensed', sans-serif;
@@ -232,19 +229,16 @@ ul{
   overflow: hidden;
 }
 
-.card-body ul{
-	font-size: 95%;
-}
-
 .card:hover{
   box-shadow: 3px 3px 8px hsl(0, 0%, 70%);
-  background-color: rgb(161, 211, 138);
+  background-color: rgb(107, 224, 222);
 }
 
 .texto{
   display: flex;
   gap: 2vh;
   padding-bottom: 3vh;
+  font-size: 95%;
 }
 
 .texto p{
@@ -253,9 +247,22 @@ ul{
   text-transform: uppercase;
 }
   
+.textoCaracteristica{
+
+  font-size: 95%;
+}
+
 .icon{
   font-size: 2.5vh;
   color: white;
+}
+
+td{
+  padding: 1vh 6vh;  
+}
+
+th{
+    text-align: left ;
 }
 
 span {
