--- a/Front/css/escanearChapita.css
+++ b/Front/css/escanearChapita.css
@@ -64,12 +64,12 @@ header{
   }
 /* FIN HEADER*/
 
-/* MENU */
-#menu2{
+ /* MENU */
+ #menu2{
   position: absolute;
   left: 150px;
 }
-
+  
 #menu2 button{
   border: none;
   background-color: transparent;
@@ -77,62 +77,74 @@ header{
   cursor: pointer;
   transition: color 0.5s ease-in-out;
 }
-
+  
 /*cuando pasamos el cursor por arriba cambia el color*/
 #menu2 button:hover{
-  color: rgb(220, 165, 236);
+  color: #b3e5fc;
 }
-
+  
 #menu2 i{
   font-size: 20px;
 }
-
+  
 .side-bar{
   position: absolute; /*no ocupa espacio*/
-  background-color:  rgb(69, 17, 90);
+  background-color: rgba(69, 17, 90, 0.89);
   width: 280px;
   top: 0;
   bottom: 0;
   left: 0;
   transform: translateX(-100%);
   transition: transform 0.5s ease-in-out;
-  z-index: 2
+  z-index: 2; /*Para que aparezca arriba de la portada, (cuanto mas adelante debe estar as grande es el num)*/
 }
   
 .side-bar.open{
   transform: translateX(0);
 }
-
+  
 nav p{
   font-family: 'Fira Sans', sans-serif;
   color: white;
-  font-size: 25px;
-  margin-top: 23px;
+  font-size: 20px;
+  margin-top: 28px;
   margin-left: 50px;
 }
-
+  
 .conj-botones-menu{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: space-between;
-  padding: 100px 50px;
-  gap: 8vh;
+  padding: 50px 50px;
+  gap: 5vh;
 }
-
+  
 .boton-menu{
   font-family: 'Fira Sans', sans-serif;
   color: white;
+  font-size: 2.8vh;
+  cursor: pointer;
+  transition: color 0.4s ease-in-out;
+  text-decoration: none;
+}
+  
+
+
+.boton-menu:hover{
+  color: rgb(216, 148, 223);
+}
+  
+.boton-menu-seleccionado{
+  font-family: 'Fira Sans', sans-serif;
+  color: rgb(0, 0, 0);
   font-size: 20px;
   cursor: pointer;
   transition: color 0.5s ease-in-out;
   text-decoration: none;
+  text-decoration: underline;
 }
-
-.boton-menu:hover{
-  color: rgb(183, 116, 189);
-}
-
+  
 .cruz{
   position: absolute;
   background-color: transparent;
@@ -143,18 +155,14 @@ nav p{
   color: white;
   transition: color 0.5s ease-in-out;
 }
-
+  
 .cruz:hover{
-  color:  rgb(0, 0, 0);
+  color: rgb(211, 138, 218);
 }
-
+  
 .cruz i{
   font-size: 30px;
-  
 }
-
-
-
 /* FIN MENU */
 
 /* FORMULARIOS */
