--- a/Front/css/estilosMascotasPerdidas.css
+++ b/Front/css/estilosMascotasPerdidas.css
@@ -41,88 +41,88 @@ header{
 
 /* FIN HEADER*/
   
-  /* MENU */
-  #menu2{
+ /* MENU */
+ #menu2{
   position: absolute;
   left: 150px;
-  }
+}
   
-  #menu2 button{
+#menu2 button{
   border: none;
   background-color: transparent;
   color: white;
   cursor: pointer;
   transition: color 0.5s ease-in-out;
-  }
+}
   
-  /*cuando pasamos el cursor por arriba cambia el color*/
-  #menu2 button:hover{
+/*cuando pasamos el cursor por arriba cambia el color*/
+#menu2 button:hover{
   color: #b3e5fc;
-  }
+}
   
-  #menu2 i{
+#menu2 i{
   font-size: 20px;
-  }
+}
   
-  .side-bar{
+.side-bar{
   position: absolute; /*no ocupa espacio*/
-  background-color: rgb(69, 17, 90);
+  background-color: rgba(69, 17, 90, 0.89);
   width: 280px;
   top: 0;
   bottom: 0;
   left: 0;
   transform: translateX(-100%);
   transition: transform 0.5s ease-in-out;
-  z-index: 2
-  }
+  z-index: 2; /*Para que aparezca arriba de la portada, (cuanto mas adelante debe estar as grande es el num)*/
+}
   
-  .side-bar.open{
+.side-bar.open{
   transform: translateX(0);
-  }
+}
   
-  nav p{
+nav p{
   font-family: 'Fira Sans', sans-serif;
   color: white;
-  font-size: 25px;
-  margin-top: 23px;
+  font-size: 20px;
+  margin-top: 28px;
   margin-left: 50px;
-  }
+}
   
-  .conj-botones-menu{
+.conj-botones-menu{
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-content: space-between;
-  padding: 100px 50px;
-  gap: 8vh;
-  }
+  padding: 50px 50px;
+  gap: 5vh;
+}
   
-  .boton-menu{
+.boton-menu{
   font-family: 'Fira Sans', sans-serif;
   color: white;
+  font-size: 2.8vh;
+  cursor: pointer;
+  transition: color 0.4s ease-in-out;
+  text-decoration: none;
+}
+  
+
+
+.boton-menu:hover{
+  color: rgb(216, 148, 223);
+}
+  
+.boton-menu-seleccionado{
+  font-family: 'Fira Sans', sans-serif;
+  color: rgb(0, 0, 0);
   font-size: 20px;
   cursor: pointer;
   transition: color 0.5s ease-in-out;
   text-decoration: none;
-  }
+  text-decoration: underline;
+}
   
-
-
-  .boton-menu:hover{
-  color: rgb(183, 116, 189);
-  }
-  
-  .boton-menu-seleccionado{
-    font-family: 'Fira Sans', sans-serif;
-    color: rgb(0, 0, 0);
-    font-size: 20px;
-    cursor: pointer;
-    transition: color 0.5s ease-in-out;
-    text-decoration: none;
-    text-decoration: underline;
-  }
-  
-  .cruz{
+.cruz{
   position: absolute;
   background-color: transparent;
   border: none;
@@ -131,26 +131,24 @@ header{
   cursor: pointer;
   color: white;
   transition: color 0.5s ease-in-out;
-  }
+}
   
-  .cruz:hover{
-  color: black;
-  }
+.cruz:hover{
+  color: rgb(211, 138, 218);
+}
   
-  .cruz i{
+.cruz i{
   font-size: 30px;
-  
-  }
-  
-  /* FIN MENU */
+}
+/* FIN MENU */
 
 /* MAIN */
 .portada{
   z-index: 1;
-  background-image: url("../fotos/portadaAdoptar.jpg");
+  background-image: url("../fotos/perritoCostado.jpeg");
   background-blend-mode: darken;
   height: 75vh;
-  background-position: center -50px;
+  background-position: center -20px;
   background-size: cover;
   position: relative;
 }
@@ -169,7 +167,7 @@ background-color: rgba(0, 0, 0, 0.479);
 .portada section{
   position: relative; /*Para que el texto este adelante del fondo negro transparente*/
   color: white;
-  padding: 50vh 1vh 0 150vh;
+  padding: 50vh 1vh 0 100vh;
 }
 
 .portada h2{
@@ -190,7 +188,7 @@ background-color: rgba(0, 0, 0, 0.479);
 }
 
 .card{
-	background: rgb(166, 196, 97);
+	background: rgb(226, 35, 124);
 	margin-bottom: 2em;
 	width: 32%;
   border-radius: 5%;
@@ -219,7 +217,7 @@ ul{
 }
 
 .card-title{
-  background: rgba(199, 233, 120, 0.85);
+  background: rgba(206, 134, 182, 0.781);
   padding: 3.5% 0 2.5% 0;
   color: white;
   font-family: 'Roboto Condensed', sans-serif;
@@ -247,7 +245,7 @@ ul{
 
 .card:hover{
   box-shadow: 3px 3px 8px hsl(0, 0%, 70%);
-  background-color: rgb(161, 211, 138);
+  background-color: rgb(221, 126, 223);
 }
 
 .texto{
