--- a/Front/css/estilosPerfilPerdide.css
+++ b/Front/css/estilosPerfilPerdide.css
@@ -2,46 +2,46 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-  }
+}
   
-  html{
+html{
     width: 100%;
-  }
+}
   
-  /* HEADER */
-  header{
+/* HEADER */
+header{
     background-color: #A632D4;
     display: flex;
     height: 85px;
-    /*width: 100vw;*/
     color: white;
     font-family: 'Balsamiq Sans', cursive;
     justify-content: space-around;
     align-items: center;
-  }
-  
-  .logo{
+}
+
+.logo{
     display: flex;
     align-items: center;
     gap: 5vh;
     padding-left: 40vh;
-  
   }
   
-    
-  .usuario{
+  
+.usuario{
     display: flex;
     gap: 20px;
     padding-right: 25vh;
     align-items: center;
-  
-  }
     
-  .usuario-icon{
+}
+
+
+    
+.usuario-icon{
     font-size: 30px;
-  }
+}
     
-  .header-button{
+.header-button{
     border-radius: 7px;
     text-align: center;
     font-size: 16px;
@@ -53,15 +53,15 @@
     cursor: pointer;
     transition: background-color 0.5s ease-in-out;
     text-decoration: none;
-  }
+}
     
-  .header-button:hover{
+.header-button:hover{
     background-color: rgb(11, 172, 172);
-  }
-  /* FIN HEADER*/
+}
+/* FIN HEADER*/
     
-  /* MENU */
-  #menu2{
+ /* MENU */
+ #menu2{
     position: absolute;
     left: 150px;
   }
@@ -161,103 +161,145 @@
   }
   /* FIN MENU */
   
-  /* MAIN */
-  .portada{
-    background-image: url("../fotos/portadaInicio.jpg");
+/* MAIN */
+.portada{
+    z-index: 1;
+    background-image: url("../fotos/portadaPerfil.jpg");
+    background-blend-mode: darken;
+    height: 75vh;
     background-position: center center;
     background-size: cover;
-    height: 75vh;
-    background-blend-mode: darken;
     position: relative;
-  }
+}
 
-  .portada::before{
+/* PARA OSCURECER LA IMAGEN DEL FONDO */
+.portada::before{
     content:''; /* existe contenido */
 	position: absolute; /* para poder estirarlo */ 
     top: 0; /* lo estiramos a todos los extremos de la portada */
 	bottom: 0;
 	left: 0;
 	right: 0;
-	background-color: rgba(0, 0, 0, 0.363);
+	background-color: rgba(0, 0, 0, 0.479);
 }
-  
-  .portada div{
+
+.portada section{
     position: relative; /*Para que el texto este adelante del fondo negro transparente*/
     color: white;
-    text-align: center;
-    padding: 20vh 0;
-  }
-  
-  .portada h2{
+    padding: 35vh 10vh 0 120vh;
+}
+
+.portada h2{
     font-family: 'Roboto Condensed', sans-serif;
     font-size: 8vh;
-    margin-bottom: 2vh;
-  }
-  
-  .portada p{
+    margin-bottom: 3vh;
+    padding: 0 4vh 0 18.5vh;
+}
+
+.portada p{
     font-family: 'Abel', sans-serif;
-    font-size: 4vh;
-  }
-  
-  #palabraAmor{
-    color: rgb(221, 0, 122);
-  }
-  
-  .principal{
+    font-size: 2.7vh;
+    text-align: end;
+    padding: 0 3vh 0 15vh;
+}
+
+.principal{
     display: flex;
     flex-direction: column;
-    margin: 5em 7em 5em 7em;
-  }
+    padding: 13vh 20vh 5vh 20vh;
+}
   
-  .descripcionYFoto{
+.descripcionYFoto{
     display: flex;
-    gap: 16vh;
-  }
+    gap: 15vh;
+}
   
-  .descripcion{
+.descripcion{
     width: 100%;
-  }
+}
   
-  .descripcion > h2, .textoMapa > h2{
+.descripcion > h2{
     font-size: 4vh;
     font-family: 'Roboto Condensed', sans-serif;
     color: black;
     margin-bottom: 5vh;
-  }
+}
   
-  .descripcion > p, .descripcion > b, .textoMapa > p{
+.descripcion > p, .descripcion > b{
     margin-top: 5vh;
     font-family: 'Abel', sans-serif;
     font-size: 3vh;
-  }
+}
+
+p{
+    margin-top: 2vh;
+    font-family: 'Abel', sans-serif;
+    font-size: 3vh;
+}
   
-  .imgDescripcion{
+.imgDescripcion{
     margin-top: 9vh;
-  }    
-  
+}
+
+table{
+    font-family: 'Abel', sans-serif;
+    font-size: 3vh;
+}
+
+td{
+  padding: 1vh 6vh;  
+}
+
+th{
+    text-align: left ;
+}
+
+h3{
+    font-family: 'Abel', sans-serif
+}
+
+.botonAdoptar{
+    border-radius: 7px;
+    text-align: center;
+    font-size: 25px;
+    font-family: 'Roboto Condensed', sans-serif;
+    border: 2px solid white;
+    background-color: #C281EA;
+    color: white;
+    padding: 2px 9px;
+    cursor: pointer;
+    transition: background-color 0.5s ease-in-out;
+    text-decoration: none;
+}
+    
+.botonAdoptar:hover{
+    background-color:rgb(206, 152, 240);
+}
 /* FIN MAIN */
+
 
 /* FOOTER */
 .contacto-general{
     display: flex;
     padding: 0px 350px;
     justify-content: space-between;
-  }
+}
   
-  .contacto{
+.contacto{
     display: flex;
     gap: 10px;
-  }
+}
   
-  .texto-contactanos{
+.texto-contactanos{
     display: flex;
     flex-direction: column;
     align-items: center;
-  }
-  
-  .contacto-icon{
+    margin-top: 2vh;
+}
+
+.contacto-icon{
     font-size: 40px;
-  }
+}
   
   footer{
     background-color: #A632D4;
@@ -270,4 +312,5 @@
     flex-direction: column;
     gap: 20px;
   }
-  /* FIN FOOTER*/
+/*FIN FOOTER*/
+
