--- a/Front/css/estilosPreguntasDarEnAdopcion.css
+++ b/Front/css/estilosPreguntasDarEnAdopcion.css
@@ -60,8 +60,8 @@
   }
   /* FIN HEADER*/
     
-  /* MENU */
-  #menu2{
+   /* MENU */
+   #menu2{
     position: absolute;
     left: 150px;
   }
@@ -161,84 +161,183 @@
   }
   /* FIN MENU */
   
-  /* MAIN */
+  /* FORMULARIOS */
   .portada{
-    background-image: url("../fotos/portadaInicio.jpg");
+    z-index: 1;
+    background-image: url("../fotos/FotoMascotas.jpg");
+    background-blend-mode: darken;
+    height: 75vh;
     background-position: center center;
     background-size: cover;
-    height: 75vh;
-    background-blend-mode: darken;
     position: relative;
   }
-
-  .portada::before{
-    content:''; /* existe contenido */
-	position: absolute; /* para poder estirarlo */ 
-    top: 0; /* lo estiramos a todos los extremos de la portada */
-	bottom: 0;
-	left: 0;
-	right: 0;
-	background-color: rgba(0, 0, 0, 0.363);
-}
   
-  .portada div{
-    position: relative; /*Para que el texto este adelante del fondo negro transparente*/
-    color: white;
-    text-align: center;
-    padding: 20vh 0;
-  }
-  
-  .portada h2{
-    font-family: 'Roboto Condensed', sans-serif;
-    font-size: 8vh;
-    margin-bottom: 2vh;
-  }
-  
-  .portada p{
-    font-family: 'Abel', sans-serif;
-    font-size: 4vh;
-  }
-  
-  #palabraAmor{
-    color: rgb(221, 0, 122);
-  }
-  
-  .principal{
+  .titulo{
     display: flex;
-    flex-direction: column;
-    margin: 5em 7em 5em 7em;
+    gap: 25px;
   }
   
-  .descripcionYFoto{
-    display: flex;
-    gap: 16vh;
+  h1{
+    font-family: 'Fira Sans', sans-serif;
+    padding: 40px 0 15px 260px;
   }
+  
+  .icon-titulo{
+    font-size: 20px;
+    padding: 40px 0 0 0;
+  }
+  
+  form{
+    display: flex;
+    justify-content: center;
+    gap: 10vh;
+  }
+  
+  
+  form fieldset{
+    border: 2px solid #A632D4;
+    border-radius: 15px;
+    padding: 25px;
+    height: 66vh;
+  }
+  
+  .titulos-form{
+    font-family: 'Fira Sans', sans-serif;
+    margin-bottom: 15px;
+  }
+  
+  form input{
+    width: 300px;
+    height: 45px;
+    border: none;
+    background-color: #f5f5f5;
+    color: #757575;
+    border-radius: 15px;
+    padding: 10px 12px;
+    font-size: 16px;
+  }
+  
+  textarea{
+    width: 300px;
+    height: 75px;
+    border: none;
+    background-color: #f5f5f5;
+    color: #757575;
+    border-radius: 15px;
+    padding: 10px 12px;
+    font-size: 16px;
+    font-family: 'Fira Sans', sans-serif;
+  }
+  
+  select{
+    display: inline-block;
+    width: 100%;
+    border: none;
+    background-color: #f5f5f5;
+    color: #757575;
+    border-radius: 15px;
+    padding: 10px 12px;
+  }
+  
   
   .descripcion{
-    width: 100%;
+    width: 300px;
+    height: 45px;
+    border: none;
+    background-color: #f5f5f5;
+    color: #757575;
+    border-radius: 15px;
+    padding: 10px 12px;
+    font-size: 16px;
   }
-  
-  .descripcion > h2, .textoMapa > h2{
-    font-size: 4vh;
-    font-family: 'Roboto Condensed', sans-serif;
-    color: black;
-    margin-bottom: 5vh;
-  }
-  
-  .descripcion > p, .descripcion > b, .textoMapa > p{
-    margin-top: 5vh;
-    font-family: 'Abel', sans-serif;
-    font-size: 3vh;
-  }
-  
-  .imgDescripcion{
-    margin-top: 9vh;
-  }    
-  
-/* FIN MAIN */
 
-/* FOOTER */
-.contacto-general{
+  .preguntaSiNo{
+    font-size: 16px;
+    font-family: 'Fira Sans', sans-serif;
+  }
+  
+  .container{
+    display: block;
+    height: 5vh;
+    border-radius: 15px;
+    position: relative;
+    cursor: pointer;
+    padding: 2vh 0 0 10vh;
+  }
+  
+  .container input { /*Escondemos el default checkbox*/
+    position: absolute;
+    opacity: 0;
+    cursor: pointer;
+    height: 0;
+    width: 0;
+  }
+  
+  .container input:checked ~ .checkmark {
+    background-color: #C281EA;
+  }
+  
+  .container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  .checkmark{
+    position: absolute;
+    top: 1.5vh;
+    left: 20px;
+    height: 25px;
+    width: 25px;
+    background-color: #eee;
+    
+  }
+  
+  .checkmark:after {
+    content: "";
+    position: absolute;
+    display: none;
+  }
+  
+  /* Show the checkmark when checked */
+  .container input:checked ~ .checkmark:after {
+    display: block;
+  }
+  
+  /* Style the checkmark/indicator */
+  .container .checkmark:after {
+    left: 9px;
+    top: 5px;
+    width: 5px;
+    height: 10px;
+    border: solid white;
+    border-width: 0 3px 3px 0;
+    -webkit-transform: rotate(45deg);
+    -ms-transform: rotate(45deg);
+    transform: rotate(45deg);
+  }
+
+  .boton-enviar{
+    margin-top: 35px;
+    border-radius: 7px;
+    text-align: center;
+    font-size: 21px;
+    font-family: 'Roboto Condensed', sans-serif;
+    border: none;
+    background-color: #C281EA;
+    color: white;
+    padding: 6px 10px;
+    cursor: pointer;
+    transition: color 0.5s ease-in-out;
+    transition: border 0.5s ease-in-out;
+  }
+  
+  .boton-enviar:hover{
+    color: rgb(220, 165, 236);
+  }
+
+  /* FIN FORMULARIOS */
+  
+  /* FOOTER */
+  .contacto-general{
     display: flex;
     padding: 0px 350px;
     justify-content: space-between;
@@ -271,3 +370,5 @@
     gap: 20px;
   }
   /* FIN FOOTER*/
+  
+  
